# notate

./: .gitignore  LICENSE  README.md  notate.py  pyproject.toml
